tests/executionspec/snapshots/execution_spec__test-missing-argument-on-all-resolvers.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "no argument 'id' found",
    "trace": [
      "Query",
      "newsGrpcBody",
      "@grpc",
      "body"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Query",
      "newsGrpcHeaders",
      "@grpc",
      "headers"
    ],
    "description": null
  },
  {
    "message": "no argument 'url' found",
    "trace": [
      "Query",
      "newsGrpcUrl",
      "@grpc",
      "path"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Query",
      "postGraphQLArgs",
      "@graphQL",
      "args"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Query",
      "postGraphQLHeaders",
      "@graphQL",
      "headers"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Query",
      "postHttp",
      "@http",
      "path"
    ],
    "description": null
  }
]
