tests/executionspec/snapshots/execution_spec__test-missing-mutation-resolver.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Mutation",
      "createUser"
    ],
    "description": null
  }
]
