tests/executionspec/snapshots/execution_spec__test-multi-interface.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

interface IA {
  a: String
}

interface IB {
  b: String
}

type B implements IA & IB {
  a: String
  b: String
}

type Query {
  bar: B @http(path: "/user")
}
