tests/executionspec/snapshots/execution_spec__test-ref-other.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

type InPost {
  get: [Post]
}

scalar JSON

scalar PhoneNumber

type Post {
  id: Int!
  userId: Int!
}

type Query {
  posts: InPost
}

scalar Url

schema {
  query: Query
}
