tests/executionspec/snapshots/execution_spec__test-scalars.md_test_3.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "url": "https://tailcall.run/"
    }
  }
}
