tests/executionspec/snapshots/execution_spec__test-server-base-types.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(port: 8000) @upstream(baseURL: "http://abc.com", proxy: {url: "http://localhost:3000"}) {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
}
